--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_app
-description: A new Flutter application.
+name: flutter_news_app
+description: A new Flutter project.
 
 dependencies:
   flutter:
@@ -9,6 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   http: "^0.11.3+16"
+  timeago: "^1.2.0"
 
 dev_dependencies:
   flutter_test:
