--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.2
   timeago: ^2.0.10
   connectivity: ^0.3.2
   transparent_image: ^0.1.0
   share: ^0.5.3
   http: ^0.12.0+1
+  flutter_launcher_icons: ^0.7.0
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +23,8 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon/news.png"
