--- a/android/local.properties
+++ b/android/local.properties
@@ -1,5 +1,5 @@
-sdk.dir=/home/diego/Android/Sdk
-flutter.sdk=/var/lib/flutter
+sdk.dir=C:\\Users\\diego\\AppData\\Local\\Android\\sdk
+flutter.sdk=C:\\flutter
 flutter.versionName=1.0.0
 flutter.versionCode=1
 flutter.buildMode=debug
