--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,18 +4,18 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  timeago: ^2.0.10
+  timeago: ^2.0.18
   connectivity: ^0.3.2
-  transparent_image: ^0.1.0
-  share: ^0.5.3
-  http: ^0.12.0+1
-  flutter_launcher_icons: ^0.7.0
+  transparent_image: ^1.0.0
+  share: ^0.6.2+1
+  http: ^0.12.0+2
+  flutter_launcher_icons: ^0.7.2+1
 
 dev_dependencies:
   flutter_test:
