--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   share: ^0.6.2+1
   http: ^0.12.0+2
   flutter_launcher_icons: ^0.7.2+1
+  shimmer: ^1.0.0
 
 dev_dependencies:
   flutter_test:
